--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,11 +9,11 @@ branches:
   only:
     - master
 
-# notifications:
-#   - provider: Email
-#     on_build_success: false
-#     on_build_failure: false
-#     on_build_status_changed: false
+notifications:
+  - provider: Email
+    on_build_success: false
+    on_build_failure: false
+    on_build_status_changed: false
 
 install:
   # if there's a newer build queued for the same PR, cancel this one
