Build Traits.jl explicitly in Appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,11 @@ install:
 build_script:
   # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
+  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.clone(\"https://github.com/mauro3/Traits.jl\", \"Traits\"); Pkg.build(\"Traits\")"
   - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.clone(pwd(), \"Discretizations\"); Pkg.build(\"Discretizations\")"
 
 test_script:
-  - C:\projects\julia\bin\julia -e "Pkg.test(\"Discretizations\")"
+  - C:\projects\julia\bin\julia -e "Pkg.test(\"Discretizations\", coverage=true)"
+
+# after_success:
+#   - if [ $TRAVIS_JULIA_VERSION = "nightly" ]; then julia -e 'cd(Pkg.dir("Discretizations")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'; fi
