--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ os:
   - osx
 julia:
   - 0.4
-  - nightly
+  # - nightly
 notifications:
   email: false
 script:
   - if [ -e .git/shallow ]; then git fetch --unshallow; fi
+  - julia -e 'versioninfo()'
   - julia -e 'Pkg.clone("https://github.com/mauro3/Traits.jl"); Pkg.build("Traits")'
   - julia -e 'Pkg.clone(pwd()); Pkg.build("Discretizations")'
   - julia -e 'Pkg.test("Discretizations", coverage=true)'
