--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,8 +4,8 @@ environment:
     # - JULIAVERSION: "julialang/bin/winnt/x64/0.3/julia-0.3-latest-win64.exe"
     - JULIAVERSION: "julialang/bin/winnt/x86/0.4/julia-0.4-latest-win32.exe"
     - JULIAVERSION: "julialang/bin/winnt/x64/0.4/julia-0.4-latest-win64.exe"
-    - JULIAVERSION: "julianightlies/bin/winnt/x86/julia-latest-win32.exe"
-    - JULIAVERSION: "julianightlies/bin/winnt/x64/julia-latest-win64.exe"
+    # - JULIAVERSION: "julianightlies/bin/winnt/x86/julia-latest-win32.exe"
+    # - JULIAVERSION: "julianightlies/bin/winnt/x64/julia-latest-win64.exe"
 
 branches:
   only:
@@ -31,11 +31,13 @@ install:
 build_script:
   # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
-  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.clone(\"https://github.com/mauro3/Traits.jl\", \"Traits\"); Pkg.build(\"Traits\")"
-  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.clone(pwd(), \"Discretizations\"); Pkg.build(\"Discretizations\")"
-
-test_script:
+  - C:\projects\julia\bin\julia -e "versioninfo()"
+  - C:\projects\julia\bin\julia -e "Pkg.clone(\"https://github.com/mauro3/Traits.jl\", \"Traits\"); Pkg.build(\"Traits\")"
+  - C:\projects\julia\bin\julia -e "Pkg.clone(pwd(), \"Discretizations\"); Pkg.build(\"Discretizations\")"
   - C:\projects\julia\bin\julia -e "Pkg.test(\"Discretizations\", coverage=true)"
 
-# after_success:
-#   - if [ $TRAVIS_JULIA_VERSION = "nightly" ]; then julia -e 'cd(Pkg.dir("Discretizations")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'; fi
+on_success:
+  - C:\projects\julia\bin\julia -e "cd(Pkg.dir(\"Discretizations\")); Pkg.add(\"Coverage\"); using Coverage; Coveralls.submit(Coveralls.process_folder())"
+
+# test_script:
+#   - C:\projects\julia\bin\julia -e "Pkg.test(\"Discretizations\", coverage=true)"
