--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,10 +34,10 @@ build_script:
   - C:\projects\julia\bin\julia -e "versioninfo()"
   - C:\projects\julia\bin\julia -e "Pkg.clone(\"https://github.com/mauro3/Traits.jl\", \"Traits\"); Pkg.build(\"Traits\")"
   - C:\projects\julia\bin\julia -e "Pkg.clone(pwd(), \"Discretizations\"); Pkg.build(\"Discretizations\")"
+  # - C:\projects\julia\bin\julia -e "Pkg.test(\"Discretizations\", coverage=true)"
+
+test_script:
   - C:\projects\julia\bin\julia -e "Pkg.test(\"Discretizations\", coverage=true)"
 
-on_success:
-  - C:\projects\julia\bin\julia -e "cd(Pkg.dir(\"Discretizations\")); Pkg.add(\"Coverage\"); using Coverage; Coveralls.submit(Coveralls.process_folder())"
-
-# test_script:
-#   - C:\projects\julia\bin\julia -e "Pkg.test(\"Discretizations\", coverage=true)"
+# on_success:
+#   - C:\projects\julia\bin\julia -e "cd(Pkg.dir(\"Discretizations\")); Pkg.add(\"Coverage\"); using Coverage; Coveralls.submit(Coveralls.process_folder())"
