--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
   - julia -e 'Pkg.clone(pwd()); Pkg.build("Discretizations")'
   - julia -e 'Pkg.test("Discretizations", coverage=true)'
 after_success:
-  - if [ $TRAVIS_JULIA_VERSION = "nightly" ]; then julia -e 'cd(Pkg.dir("Discretizations")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'; fi
+  - if [[ $TRAVIS_JULIA_VERSION = "nightly" ]]; then julia -e 'cd(Pkg.dir("Discretizations")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'; fi
